[gd_scene load_steps=3 format=3 uid="uid://nkmfv30bg3gd"]

[ext_resource type="Script" path="res://saves.gd" id="1_1h0vl"]
[ext_resource type="PackedScene" uid="uid://dn6tmvsy5alev" path="res://Levels/LevelController.tscn" id="2_evyo5"]

[node name="saves" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1h0vl")
LEVEL_MANAGER = ExtResource("2_evyo5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 2
offset_left = -46.0
offset_top = -199.0
offset_right = 55.0
offset_bottom = -173.0
text = "Saved games"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -103.0
offset_right = 207.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2

[node name="Save 1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save 1"

[node name="Save 2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save 2"

[node name="Save 3" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save 3"

[node name="Save 4" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save 4"

[node name="Save 5" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save 5"

[node name="Save 6" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save 6"

[connection signal="pressed" from="Panel/VBoxContainer/Save 1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Save 2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Save 3" to="." method="_on_save_3_pressed"]
